--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@ function openVideoModal(url) {
     openLoginModal();
     return;
   }
+
   const modal = document.getElementById("videoModal");
   const player = document.getElementById("videoPlayer");
+
   player.pause();
   player.src = "";
   modal.classList.remove("hidden");
@@ -172,10 +174,31 @@ function openVideoModal(url) {
     const hls = new Hls();
     hls.loadSource(url);
     hls.attachMedia(player);
+    window.currentHls = hls;
   } else {
     player.src = url;
   }
+
+  player.play().catch(err => console.warn("播放失败", err));
 }
+
+function closeVideoModal() {
+  const modal = document.getElementById("videoModal");
+  const player = document.getElementById("videoPlayer");
+
+  // 暂停视频播放
+  player.pause();
+  player.src = "";
+
+  // 释放 hls 对象（如果有）
+  if (window.currentHls) {
+    window.currentHls.destroy();
+    window.currentHls = null;
+  }
+
+  modal.classList.add("hidden");
+}
+
 
 
     document.getElementById("closeModal").onclick = () => {
