--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
   </div>
 
   <!-- 视频弹窗模态框 -->
-<div id="videoModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden p-4">
-  <div class="relative w-full max-w-4xl max-h-[90vh]">
-    <button onclick="closeVideoModal()" class="absolute -top-4 -right-4 bg-white text-black rounded-full p-3 shadow-lg z-50 hover:bg-gray-200 transition-all">
-      ✕
-    </button>
-    <video id="videoPlayer" class="w-full h-auto max-h-[80vh] rounded-lg shadow-lg" controls></video>
+  <div id="videoModal" class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center hidden z-50">
+    <div class="bg-white p-4 rounded-lg shadow-lg w-full sm:max-w-3xl relative">
+      <button id="closeModal" class="absolute top-2 right-2 bg-red-600 text-white px-3 py-1 rounded-full text-lg">✖</button>
+      <video id="videoPlayer" class="w-full rounded-lg" controls></video>
+    </div>
   </div>
-</div>
 
 
   <!-- 登录模态框 -->
