--- a/index.html
+++ b/index.html
@@ -53,19 +53,28 @@
   </div>
 
   <!-- 视频弹窗模态框 -->
-<div id="videoModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden p-4">
-  <div class="relative w-full max-w-[90vw] max-h-[90vh] flex items-center justify-center">
-    <button onclick="closeVideoModal()" class="absolute -top-4 -right-4 bg-white text-black rounded-full p-3 shadow-lg z-50 hover:bg-gray-200 transition-all">✕</button>
-    <div class="w-full h-full flex items-center justify-center">
+<!-- 视频弹窗模态框 -->
+<div id="videoModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden p-4 overflow-auto">
+  <div class="relative w-full max-w-screen-md sm:max-w-screen-lg max-h-screen flex items-center justify-center p-4">
+    
+    <!-- 关闭按钮 -->
+    <button onclick="closeVideoModal()" 
+      class="absolute top-2 right-2 bg-white text-black rounded-full w-10 h-10 flex items-center justify-center shadow-lg z-50 text-xl hover:bg-gray-200 transition-all">
+      ✕
+    </button>
+    
+    <!-- 视频播放器容器 -->
+    <div class="w-full h-auto flex items-center justify-center">
       <video
         id="videoPlayer"
-        class="rounded-lg shadow-lg max-w-full max-h-full object-contain"
+        class="rounded-lg shadow-lg w-full h-auto max-h-[80vh] object-contain"
         controls
         playsinline
       ></video>
     </div>
   </div>
 </div>
+
 
 
 
