--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex justify-center items-center">
     <div class="bg-white p-6 rounded shadow-md w-96">
       <h2 class="text-xl font-bold mb-4">登录</h2>
+                          <!-- 会员价格说明 -->
+        <p class="text-gray-700 mb-2">永久会员账号8.8元</p>
       <input id="username" type="text" placeholder="用户名" class="border px-3 py-2 w-full mb-2 rounded" />
       <input id="password" type="password" placeholder="密码" class="border px-3 py-2 w-full mb-2 rounded" />
       <div id="loginError" class="text-red-500 text-sm mb-2 hidden">账号或密码错误</div>
