--- a/index.html
+++ b/index.html
@@ -66,20 +66,22 @@
 
 
   <!-- 登录模态框 -->
-  <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex justify-center items-center">
-    <div class="bg-white p-6 rounded shadow-md w-96">
-      <h2 class="text-xl font-bold mb-4">登录</h2>
-                          <!-- 会员价格说明 -->
+    <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-96">
+            <h2 class="text-xl font-semibold mb-4">用户登录</h2>
+                    <!-- 会员价格说明 -->
         <p class="text-gray-700 mb-2">永久会员账号8.8元</p>
-      <input id="username" type="text" placeholder="用户名" class="border px-3 py-2 w-full mb-2 rounded" />
-      <input id="password" type="password" placeholder="密码" class="border px-3 py-2 w-full mb-2 rounded" />
-      <div id="loginError" class="text-red-500 text-sm mb-2 hidden">账号或密码错误</div>
-      <div class="flex justify-between">
-        <button id="submitLogin" class="bg-blue-600 text-white px-4 py-2 rounded">登录</button>
-        <button id="closeLogin" class="bg-gray-400 text-white px-4 py-2 rounded">取消</button>
-      </div>
+            <input type="text" id="username" placeholder="用户名" class="w-full p-2 border rounded mb-2">
+            <input type="password" id="password" placeholder="密码" class="w-full p-2 border rounded mb-2">
+            <button id="submitLogin" class="w-full bg-blue-500 text-white px-4 py-2 rounded">登录</button>
+            <button id="closeLogin" class="mt-2 w-full bg-gray-300 text-black px-4 py-2 rounded">取消</button>
+                    <!-- 购买会员账号按钮 -->
+        <a href="https://www.idatariver.com/zh-cn/project/%E6%98%A5%E7%A7%8B%E5%BD%B1%E8%A7%86-1a19" target="_blank" class="mt-2 block text-center w-full bg-green-500 text-white px-4 py-2 rounded">
+            购买会员账号
+        </a>
+            <p id="loginError" class="text-red-500 hidden mt-2">用户名或密码错误</p>
+        </div>
     </div>
-  </div>
 
   <script>
     let videos = [];
