--- a/index.html
+++ b/index.html
@@ -127,22 +127,30 @@ function validateLogin(username, password) {
       }
     }
 
-    async function loadVideos() {
-      const sources = ["videos_all.json", "videos_xuesheng.json", "videos_part_1.json", "videos_part_2.json", "videos_part_3.json"];
-      let all = [];
-      for (const url of sources) {
-        try {
-          const res = await fetch(url);
-          const json = await res.json();
-          all = all.concat(json);
-        } catch (e) {
-          console.warn("无法加载：" + url);
-        }
-      }
-      videos = all;
-      generateCategories();
-      renderVideos();
+async function loadVideos() {
+  const sources = ["videos_all.json", "videos_xuesheng.json"];
+
+  // 自动添加 videos_part_1.json ~ videos_part_68.json
+  for (let i = 1; i <= 68; i++) {
+    sources.push(`videos_part_${i}.json`);
+  }
+
+  let all = [];
+  for (const url of sources) {
+    try {
+      const res = await fetch(url);
+      const json = await res.json();
+      all = all.concat(json);
+    } catch (e) {
+      console.warn("无法加载：" + url);
     }
+  }
+  
+  videos = all;
+  generateCategories();
+  renderVideos();
+}
+
     
     function generateCategories() {
       const categoryContainer = document.getElementById('category-container');
