--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="text-xl font-bold">📺 我的视频站</div>
       <button class="sm:hidden text-gray-600" onclick="toggleMenu()">☰</button>
       <div id="navMenu" class="w-full sm:w-auto hidden sm:flex flex-col sm:flex-row gap-3 mt-2 sm:mt-0">
-        <a href="#guide" class="text-gray-700 hover:text-blue-600">观看指南</a>
-        <a href="#contact" class="text-gray-700 hover:text-blue-600">联系我们</a>
+        <a href="clarify.html" class="text-gray-700 hover:text-blue-600">观看指南</a>
+        <a href="mail.html" class="text-gray-700 hover:text-blue-600">联系我们</a>
         <div id="userInfo" class="text-gray-700 hover:text-blue-600 cursor-pointer" onclick="handleAuthClick()">登录</div>
       </div>
     </div>
